--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-   <script src="//cdn.ravenjs.com/3.2.1/raven.min.js"></script>
+   <script src="raven.min.js"></script>
    <script>Raven.config('https://3370917747c449adafa04bdf057fbca2@sentry.soenkekluth.com/6',{
              whitelistUrls: [
                  /soenkekluth\.com/
